--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
 <body>
   <header>
     <h1>VisionCode</h1>
-    <p>مرحباً بكم في موقعي الأول 🚀</p>
+    <p> welcom to my web 🚀</p>
     <a href="#" class="btn">تواصل معي</a>
   </header>
 
   <footer>
-    &copy; 2025 VisionCode. جميع الحقوق محفوظة.
+    &copy; 2025 VisionCode. .
   </footer>
 </body>
 </html>
+
